# ComfyUI-StarVector

./: README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
example_workflows/: image_to_svg_basic.json
js/: starvector.js
