[project]
name = "comfyui-starvector"
version = "1.0.0"
description = "ComfyUI custom nodes for SVG generation using StarVector models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["comfyui", "svg", "starvector", "image-to-svg", "vector-graphics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "transformers>=4.36.0",
    "torch>=2.0.0",
    "Pillow>=9.0.0",
    "starvector",
]

[project.optional-dependencies]
rasterize = [
    "cairosvg>=2.7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.js"]
